2009-10-18  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed wrong insertion point for BasicCred.
	* src/AuthConfigFactory.cc

2009-10-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Allowed non-regular file in LocalFilePathOptionHandler
	* src/OptionHandlerImpl.h
	* src/message.h

2009-10-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that Netrc::parse() cannot recognize comment line.
	* src/Netrc.cc
	* src/Util.h
	* test/NetrcTest.cc
	* test/sample.netrc

2009-10-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed typo
	* src/BtDependency.cc
	* src/BtRejectMessage.cc
	* src/FtpConnection.cc
	* src/HttpHeaderProcessor.h

2009-10-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed lintian report in man page
	* doc/aria2c.1.txt

2009-10-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Release 1.6.2

2009-10-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated Ukrainian translation. Thanks to all translators.
	* po/uk.po

2009-10-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated translation template
	* po

2009-10-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Bump up version number to 1.6.2
	* configure.ac

2009-10-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated licence message in -v output.
	* src/version_usage.cc

2009-10-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Replaced aria2 with aria2c in help message.
	* src/version_usage.cc

2009-10-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use PACKAGE_BUGREPORT and PACKAGE_URL.
	* src/version_usage.cc

2009-10-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Quoted localedir
	* src/Makefile.am

2009-10-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added AC_FUNC_STRTOD and AC_TYPE_PID_T.  Check function for pow,
	utime. Check header for utime.h.
	* configure.ac
